crates/toml/tests/snapshots/invalid/integer/leading-zero-01.stderr
TOML parse error at line 1, column 19
  |
1 | leading-zero-01 = 01
  |                   ^
unexpected leading zero, expected nothing
